[package]
publish=false
name = "sdk"
version = "0.0.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
chrono="0.4"
rust_decimal = "1.16"
derivative="2"
dyn-clone = "1"
http = "0.2"
once_cell = "1.8"
prost = "0.8"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tonic = "0.5"
tower = "0.4"
ydb-protobuf = {path="../ydb-protobuf"}