[package]
publish=false
name = "ydb"
version = "0.0.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
chrono="0.4"
derivative="2"
dyn-clone = "1"
http = "0.2"
num = "0.4"
mockall = "0.10"
once_cell = "1.8"
prost = "0.8"
prost-types = "0.8"
rand = "0.8"
reqwest= {version="0.11", features=["blocking", "json"]}
rust_decimal = "1.16"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tonic = "0.5"
tower = "0.4"
url="2.2"
ydb-protobuf = {path="../ydb-protobuf"}

[[example]]
name="simple-ping"