[package]
publish=false
name = "ydb"
version = "0.0.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
chrono="0.4"
derivative="2"
dyn-clone = "1"
http = "0.2"
itertools = "0.10"
num = "0.4"
mockall = "0.10"
once_cell = "1.8"
prost = "0.9"
prost-types = "0.9"
rand = "0.8"
reqwest= {version="0.11", features=["blocking", "json"]}
rust_decimal = "1.16"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-test = "0.2.1"
tracing-subscriber = "0.3"
tonic = {version="0.6", features=["tls"]}
tower = "0.4"
url="2.2"
ydb-grpc = {version="0.0.1", path="../ydb-grpc"}

[dev-dependencies]
async_once="0.2"
lazy_static="1.4"
ntest="0.7"
