[package]
publish = false
name = "ydb-example-urlshortener"
version = "0.0.0"
edition = "2021"
rust-version = "1.81.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashers = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3.2"
ydb = { version = "0.9.7", path = "../ydb" }
