[package]
publish = false
version = "0.0.0"
name = "ydb-grpc-helpers"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2018"
license = "APACHE-2.0"
license-file = "../LICENSE.txt"
description = "Crate contain helpers for generate grpc imports in ydb-grpc crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
