[package]
publish = true
name = "ydb-grpc"
version = "0.1.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-grpc"
rust-version = "1.68.0"

[dependencies]
prost = "0.13"
serde = { version = "1", features = ["derive"] }
tonic = { version = "0.12", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
walkdir = "2"

[features]
regenerate-sources = []
