[package]
publish = true
name = "ydb-grpc"
version = "0.2.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-grpc"
rust-version = "1.85"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true, features = [
    "tls-native-roots",
    "tls-webpki-roots",
] }
tonic-prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
pbjson-build = { workspace = true }
tonic-prost-build = { workspace = true }
walkdir = "2"

[features]
regenerate-sources = []
