[package]
publish=false
name = "ydb-protobuf"
version = "0.1.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
prost-types = "0.8"

tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
