[package]
publish=false
name = "ydb-protobuf"
version = "0.0.1"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
prost-types = "0.8"

tonic = {version = "0.5", features=["tls", "tls-roots", "tls-webpki-roots"]}

[build-dependencies]
build-helpers = {path="../build-helpers"}
prost-build = "0.8"
tonic-build = "0.5"
walkdir = "2"