[package]
publish=false
name = "ydb-protobuf"
version = "0.0.1"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"

tonic = {version = "0.6", features=["tls", "tls-roots", "tls-webpki-roots"]}

[build-dependencies]
build-helpers = {path="../build-helpers"}
prost-build = "0.9.0"
tonic-build = "0.6"
walkdir = "2"