[package]
publish = false
name = "ydb-slo-tests"
version = "0.1.0"
authors = ["fatalem0 <madchaterrer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains SLO-tests for YDB"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-slo-tests"
rust-version = "1.81.0"

[dependencies]
async-trait = "0.1"
base64 = { version = "0.22" }
clap = { version = "=4.2.7", features = ["derive"] }
rand = { version = "0.8" } # same as in tower dependency
rand_core = { version = "0.6" }
ratelimit = { version = "0.10" }
tokio = { version = "=1.38.1" }
tokio-util = { version = "=0.7.11", features = ["rt"] }
ydb = { path = "../ydb" }

[[example]]
name = "native"
path = "examples/native/native.rs"
