[package]
publish = true
name = "ydb"
version = "0.9.7"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb"
rust-version = "1.81.0"

[features]
force-exhaustive-all = [
] # The feature disable all non_exhaustive attributes in ydb public interface.

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
decimal-rs = { version = "0.1", features = ["serde"] }
derivative = "2"
derive_builder = "0.20"
futures-util = "0.3"
http = "1"
itertools = "0.14"
jsonwebtoken = "9"
mockall = "0.13"
num = "0.4"
once_cell = "1.8"
pbjson-types = "0.7"
prost = "0.13"
prost-types = "0.13"
rand = { version = "0.9", features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.13", features = ["tls-native-roots"] }
tower = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-test = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }
ydb-grpc = { version = "0.1", path = "../ydb-grpc" }

[dev-dependencies]
async_once = "0.2"
lazy_static = "1"
ntest = "0.9"
