[package]
publish = true
name = "ydb"
version = "0.11.2"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb"
rust-version = "1.82"

[features]
force-exhaustive-all = [
] # The feature disable all non_exhaustive attributes in ydb public interface.

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
decimal-rs = { version = "0.1", features = ["serde"] }
derivative = "2"
derive_builder = "0.12.0"
futures-util = "0.3"
http = "1.1.0"
itertools = "0.10"
jsonwebtoken = "7.2.0"
num = "0.4"
mockall = "0.10"
once_cell = "1.8"
prost = { workspace = true }
prost-types = { workspace = true }
pbjson-types = { workspace = true }
rand = "0.8"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
secrecy = "0.4.1"
serde = { workspace = true }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.8"
tracing = "0.1"
tracing-test = "0.2.1"
tracing-subscriber = "0.3"
tonic = { workspace = true }
tower = "0.4"
url = "2.2"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
ydb-grpc = { version = "0.2.0", path="../ydb-grpc"}

[dev-dependencies]
async_once = "0.2"
lazy_static = "1.4"
ntest = "0.7"
