[package]
publish = true
name = "ydb"
version = "0.17.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition.workspace = true
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb"
rust-version.workspace = true

[lints]
workspace = true

[features]
force-exhaustive-all = [
] # The feature disable all non_exhaustive attributes in ydb public interface.

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
decimal-rs = { version = "0.1", features = ["serde"] }
derivative = "2"
bon = "3"
derive_builder = "0.12.0"
futures-util = "0.3"
http = "1.1.0"
itertools = "0.10"
jsonwebtoken = "9.3"
time = "0.3"
num = "0.4"
mockall = "0.14"
once_cell = "1.8"
prost = { workspace = true }
prost-types = { workspace = true }
pbjson-types = { workspace = true }
rand = "0.8"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
secrecy = "0.4.1"
serde = { workspace = true }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.8"
tracing = "0.1"
tracing-test = "0.2.1"
tracing-subscriber = "0.3"
tonic = { workspace = true }
tower = "0.4"
url = "2.2"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
ydb-grpc = { version = "0.2.2", path = "../ydb-grpc" }
flate2 = "1.1.9"
rayon = "1.10"

[dev-dependencies]
anyhow = "1"
async_once = "0.2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
lazy_static = "1.4"
hdrhistogram = "7.5.4"
ntest = "0.7"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.32.1"
tokio = { version = "1.22", features = ["test-util"] }
tracing-opentelemetry = "0.33.0"
uuid = { version = "1.17.0", features = ["v4"] }

[[bench]]
name = "sdk_compare"
path = "benches/sdk_compare/main.rs"
harness = false
test = false
