[package]
publish = false
name = "ydb-slo-tests-native"
version = "0.1.0"
authors = ["fatalem0 <madchaterrer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains CLI with SLO-tests for YDB"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-slo-tests"
rust-version = "1.68.0"

[dependencies]
clap = { version = "=4.2.7", features = ["derive"] }
tokio = { version = "=1.38.1" }
tokio-util = { version = "=0.7.11", features = ["rt"] }
ydb = { version = "0.9.7", path = "../../ydb" }
async-trait = "0.1"
governor = { version = "=0.6.0" }
ydb-slo-tests-lib = { path = "../lib" }