[package]
publish = false
name = "slo"
#version = "0.9.3"
authors = ["fatalem0 <madchaterrer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains SLO-tests"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-tests/slo"
rust-version = "1.60"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.22" }
ydb = { version = "0.9.3", path="../../ydb"}
rand_core = "0.6.3"
rand = "0.8.4"
base64 = "0.13.0"
log = "0.4.14"
async-trait = "0.1.52"
tokio-util = "0.6.9"
