[package]
publish = false
name = "slo-framework"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
clap = { version = "=4.2.7", features = ["derive"] }
hdrhistogram = "7.5.4"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "http-proto",
    "metrics",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27"
rand = "0.8.5"
rand_core = "0.6.4"
ratelimit = "0.10.0"
tokio = { version = "=1.38.1", features = ["full", "signal"] }
tokio-util = { version = "=0.7.11" }
ydb = { path = "../../../ydb" }
