[package]
publish = false
name = "slo-native-query"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "slo-native-query"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
slo-framework = { path = "../../slo-framework" }
tokio = { version = "=1.38.1", features = ["full"] }
ydb = { path = "../../../../ydb" }
