[package]
publish = false
name = "slo-native-topic-tx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "slo-native-topic-tx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
slo-framework = { path = "../../slo-framework" }
tokio = { version = "=1.38.1", features = ["full"] }
tokio-util = { version = "=0.7.11" }
ydb = { path = "../../../../ydb" }
